# quicknote-backend

./: Cargo.toml  test-note.http  test-user.http
migrations/: 20250624122648_create_users_table.sql  20250624142531_create_notes_table.sql
migrations/frontend/: index.html  index1.html
src/: main.rs
src/handlers/: auth.rs  mod.rs  notes.rs
src/middleware/: auth.rs  claims.rs
src/models/: notes.rs
