[package]
name = "quicknote-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features = ["macros"] }
futures-util = "0.3"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "time"] }
tokio = { version = "1.45.1", features = ["full"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] } 
actix-cors = "0.7"

